syntax = "proto3";

package graph.substreams.data_service.consumer.v1;

import "graph/substreams/data_service/common/v1/types.proto";

// ConsumerSidecarService is the service that the substreams client calls to manage
// payment sessions. It handles RAV signing and usage tracking on the consumer side.
//
// Flow: substreams (ss) -> consumer sidecar (sc)
service ConsumerSidecarService {
  // Init initializes a new payment session with a provider.
  // Called by substreams before connecting to a provider.
  // Returns the initial RAV to use for authentication.
  rpc Init(InitRequest) returns (InitResponse);

  // ReportUsage reports usage received from the provider.
  // Called by substreams as data is received during streaming.
  rpc ReportUsage(ReportUsageRequest) returns (ReportUsageResponse);

  // EndSession ends the current session and reports final usage.
  // Called by substreams when the stream ends.
  rpc EndSession(EndSessionRequest) returns (EndSessionResponse);
}

message InitRequest {
  // The escrow account to use for funding this session
  common.v1.EscrowAccount escrow_account = 1;
  // The provider endpoint to connect to
  string provider_endpoint = 2;
  // Optional: existing RAV to continue from (for session resumption)
  common.v1.SignedRAV existing_rav = 3;
}

message InitResponse {
  // The session information including the RAV to use
  common.v1.SessionInfo session = 1;
  // The RAV to include in the payment header when connecting to provider
  common.v1.SignedRAV payment_rav = 2;
}

message ReportUsageRequest {
  // The session ID
  string session_id = 1;
  // The usage to report
  common.v1.Usage usage = 2;
}

message ReportUsageResponse {
  // Updated RAV if a new one was negotiated
  common.v1.SignedRAV updated_rav = 1;
  // Whether the session should continue
  bool should_continue = 2;
  // If should_continue is false, the reason for stopping
  string stop_reason = 3;
}

message EndSessionRequest {
  // The session ID
  string session_id = 1;
  // Final usage to report
  common.v1.Usage final_usage = 2;
}

message EndSessionResponse {
  // The final signed RAV for this session
  common.v1.SignedRAV final_rav = 1;
  // Total usage for the session
  common.v1.Usage total_usage = 2;
}
